index file changed 3

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <body>
 
 <h1>This is heading 1</h1>
-<h2>I'm saluk</h2>
-
+<h2>I'm saluk bawantha  !!!</h2>
+<h2>I'm in wattala</h2>
 
 </body>
 </html>
